--- a/assets/css/welcom.css
+++ b/assets/css/welcom.css
@@ -10,15 +10,24 @@ body {
 }
 
 header img {
+  margin-left: auto;
+  margin-right: auto;
   width: 150px;
 }
 h1 {
+  font-family: "Noto Sans", serif;
+  width: 30%;
   font-size: 2.5em;
-  font-weight: bold;
 }
-
+span {
+  font-family: "Noto Sans", serif;
+  font-weight: 1000;
+}
 main {
   padding: 20px;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h3 {
@@ -26,15 +35,43 @@ h3 {
 }
 
 button {
-  background: #00f154;
-  color: white;
+  background: #00ffff;
+  color: black;
   border: none;
   padding: 10px 20px;
-  border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0px 0px 12px 3px #00ffff;
+  inset: 10px 15px 20px #00ffff;
 }
 
 button:hover {
-  background: #0056b3;
+  background: #00c0c0;
+}
+
+.custom-checkbox {
+  flex-flow: row;
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  border: 2px solid white;
+  border-radius: 3px;
+  background: transparent;
+  cursor: pointer;
+  display: inline-block;
+  align-items: center;
+  position: relative;
+}
+
+.custom-checkbox:checked::before {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 1px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
 }
