--- a/assets/css/question.css
+++ b/assets/css/question.css
@@ -18,6 +18,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 1em;
+  margin-bottom: -2em;
   display: flex;
   justify-content: space-between;
 }
@@ -30,24 +31,25 @@ body {
 h1 {
   text-align: center;
   color: white;
-  font-size: 60px;
+  font-size: 40px;
   font-family: 'Playwrite VN', serif;
 }
 h2 {
   text-align: center;
   color: white;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: normal;
   font-family: 'Playwrite VN', serif;
-  margin-bottom: -1em;
+  margin-bottom: -2em;
 }
 .answerbox {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  margin-top: -2.5em;
 }
 .answer {
-  padding: 0.4em 3em 0.4em 3em;
+  padding: 0.6em 4.5em 0.6em 4.5em;
   background-color: #2b2a55;
   border: solid 2px #ffffff;
   border-radius: 15px;
@@ -56,6 +58,10 @@ h2 {
   font-size: 14px;
 }
 #questionsBox {
+  margin-top: 1em;
   text-align: center;
   margin-bottom: 1em;
+}
+.totalQuestions {
+  color: #b51289;
 }
