--- a/assets/css/welcom.css
+++ b/assets/css/welcom.css
@@ -9,11 +9,12 @@ body {
   width: 100%;
 }
 
-header img {
+main img {
   margin-left: auto;
   margin-right: auto;
   width: 150px;
 }
+
 h1 {
   font-family: "Noto Sans", serif;
   width: 30%;
@@ -30,6 +31,15 @@ main {
   margin-right: auto;
 }
 
+#instructions {
+  width: 60%;
+}
+
+ul {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 h3 {
   color: rgb(141, 42, 124);
 }
@@ -44,6 +54,7 @@ button {
   font-weight: bold;
   box-shadow: 0px 0px 12px 3px #00ffff;
   inset: 10px 15px 20px #00ffff;
+  margin-left: 20%;
 }
 
 button:hover {
