--- a/assets/css/welcom.css
+++ b/assets/css/welcom.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   height: 100vh;
   margin: 0;
-  background-image: url(./bg.jpg);
+  background-image: url(../img/bg.jpg);
   background-size: cover;
   background-position: center;
   color: white;
