--- a/assets/css/resultspage.css
+++ b/assets/css/resultspage.css
@@ -48,15 +48,15 @@ body {
 }
 
 .title {
-    font-size: 34px;
+    font-size: 50px;
     font-weight: 600;
     margin-top: 10px;
 }
 
 .subtitle {
-    font-size: 14px;
+    font-size: 25px;
     margin-bottom: 20px;
-    color: #b3b3b3;
+    color:white;
 }
 
 .results {
