--- a/assets/css/resultspage.css
+++ b/assets/css/resultspage.css
@@ -71,8 +71,8 @@ body {
 }
 
 .result-info p {
-    font-size: 14px;
-    color: #b3b3b3;
+    font-size: 40px;
+    color: white;
 }
 
 .result-info h3 {
