--- a/assets/css/resultspage.css
+++ b/assets/css/resultspage.css
@@ -37,7 +37,7 @@ body {
 }
 
 .logo {
-    width: 150px;
+    width: 200px;
     height: auto;
 }
 
@@ -82,12 +82,17 @@ body {
 
 .chart-container {
     position: relative;
-    width: 220px;
-    height: auto;
+    width: 400px;
+    height: 400px;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+canvas {
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .chart-text-box {
@@ -95,7 +100,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 150px;  /* Regola la larghezza */
+    width: 300px;  /* Regola la larghezza */
     height: 100px;  /* Regola l'altezza */
     display: flex;
     flex-direction: column;
@@ -103,22 +108,22 @@ body {
     justify-content: center;
     text-align: center;
     color: white;
-    font-size: 12px;
+    font-size: 16px;
 }
 .chart-text-box .main-text{
-    font-size: 14px;
+    font-size: 20px;
     font-weight: bold;
     margin-bottom: 5px;
 }
    
 .chart-text-box .highlight {
-    font-size: 14px;
+    font-size: 20px;
     font-weight: bold;
     color: cyan;
     margin-bottom: 8px;
 }
 .chart-text-box .small-text{
-    font-size: 10px;
+    font-size: 14px;
     line-height: 1.2;
 }
 
