--- a/assets/css/resultspage.css
+++ b/assets/css/resultspage.css
@@ -100,8 +100,8 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 300px;  /* Regola la larghezza */
-    height: 100px;  /* Regola l'altezza */
+    width: 300px; 
+    height: 100px;  
     display: flex;
     flex-direction: column;
     align-items: center;
