--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -8,7 +8,7 @@ html {
   margin-left: 5%;
 }
 main {
-  font-size: 35px;
+  font-size: 30px;
   font-family: outfit;
   color: white;
   display: flexbox;
@@ -27,22 +27,46 @@ footer {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 10px;
-  width: 1350px;
+  width: 1000px;
   border: none;
   border-bottom: 2px solid #ff00ff;
   font-size: 35px;
   color: white;
   outline: none;
   background-color: rgba(255, 255, 255, 0);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 .tasto {
-  padding: 10px 20px;
-  border: 2px solid #00ffff;
-  background: transparent;
-  color: #000000;
-  font-size: 35px;
+  padding: 10px 5px;
+  font-size: 20px;
   cursor: pointer;
+  margin-top: 50px;
+  filter: grayscale(100%) brightness(0.7);
+  border: 2px solid #00ffff;
   box-shadow: 0 0 10px #00ffff;
   background-color: #00ffff;
+  color: #000000;
+}
+.tasto:hover {
+  filter: none;
+  border: 2px solid #00ffff;
+  box-shadow: 0 0 10px #00ffff;
+  background-color: #00ffff;
+  color: #000000;
+}
+
+.voto {
+  display: inline-flex;
+  gap: 5px;
+}
+.star {
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  filter: grayscale(100%) brightness(0.4);
+  transition: all 0.3s ease;
+}
+
+.star.active {
+  filter: grayscale(0%);
 }
