--- a/assets/css/question.css
+++ b/assets/css/question.css
@@ -1,96 +1,159 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 body {
   background-image: url(../img/bg.jpg);
-  background-repeat: no-repeat;
   background-size: cover;
-}
-/* da revisionare grandezze font, i box delle answers */
-#logo {
-  width: 100px;
-}
-#timer {
+  background-position: top;
+  background-repeat: no-repeat;
   color: white;
-  margin-top: 2em;
-}
-#headerBox {
-  width: 85%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1em;
-  margin-bottom: -2em;
+  font-family: "Inter", serif;
   display: flex;
+  flex-direction: column;
+}
+
+/* Header */
+header {
+  width: 1000px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-}
-#mainQuest {
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-h1 {
-  text-align: center;
-  color: white;
-  font-size: 30px;
-  font-family: 'Outfit', serif;
-  margin-bottom: 1.2em;
-}
-h2 {
-  text-align: center;
-  color: white;
-  font-size: 30px;
-  font-weight: normal;
-  font-family: 'Outfit', serif;
-  margin-bottom: -0.5em;
   margin-top: 2em;
-}
-.answerbox {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  margin-top: -2.5em;
+  margin-bottom: 10em;
 }
 
-.answer {
-  padding: 0.6em 4.5em 0.6em 4.5em;
-  background-color: #2b2a55;
-  border: solid 2px #ffffff;
-  border-radius: 25px;
-  margin: 2em;
-  color: white;
-  font-size: 14px;
+header img {
+  width: 20%;
+  margin-top: 4%;
+  margin-bottom: 4%;
 }
-#questionsBox {
-  margin-top: 1em;
-  text-align: center;
-  margin-bottom: 1em;
-}
-.totalQuestions {
-  color: #b51289;
-}
-#timerDiv {
-  width: 100px;
-  height: 100px;
+
+/* Stile del timer */
+#timerContainer {
   position: relative;
+  width: 150px;
+  height: 150px;
 }
-#timerString {
+
+#timerTextContainer {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
 #timerText {
-  font-size: smaller;
-  display: block;
+  font-size: 36px;
+  font-weight: bold;
+  color: white;
 }
-#stringInSeconds {
-  font-size: smaller;
+
+#timerLabelTop,
+#timerLabelBottom {
+  font-size: 14px;
+  color: white;
+}
+
+#timerLabelTop {
+  margin-bottom: 3px;
+}
+
+#timerLabelBottom {
+  margin-top: 3px;
+}
+
+#progressCircle {
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
+  transition: stroke-dashoffset 1s linear;
+}
+
+#quizContainer {
+  margin-top: 1em;
+}
+
+/* Main */
+main {
+  width: 1000px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: "Inter", serif;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+main h1 {
+  text-align: center;
+}
+
+/* Stile domande */
+#question {
+  font-size: 3em;
+}
+
+/* stile delle risposte */
+#answers {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  align-items: center;
+  margin-top: 10em;
+  text-align: center;
   font-weight: bold;
 }
-#remainingStrings {
-  font-size: 10px;
+
+.answer-button {
+  background-color: rgba(255, 255, 255, 0.046);
+  width: 450px;
+  color: white;
+  border: 3px solid transparent;
+  border-radius: 5em;
+  padding: 1.5em 7em;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 1em;
+  margin-top: 0.3em;
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  position: relative;
 }
-#onClickAnswer {
-  background-color: #b9018a;
+
+.answer-button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50px;
+  padding: 3px;
+  background: linear-gradient(to bottom, white, transparent);
+  -webkit-mask: linear-gradient(white, white) content-box,
+    linear-gradient(white, white);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+}
+
+.answer-button:hover {
+  background-color: #cc0cb6;
+  border-radius: 5em;
+}
+
+.answer-button:disabled {
+  cursor: not-allowed;
+  background-color: #808080;
+}
+
+/* Question counter */
+footer {
+  font-size: 1.5em;
+  padding: 2.5em;
+  text-align: center;
+  margin-top: 5em;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: auto;
 }
