--- a/assets/css/welcom.css
+++ b/assets/css/welcom.css
@@ -1,88 +1,112 @@
 body {
-  font-family: Arial, sans-serif;
-  height: 100vh;
-  margin: 0;
   background-image: url(../img/bg.jpg);
-  background-size: cover;
+  background-size: 100%;
   background-position: center;
+  background-repeat: no-repeat;
   color: white;
-  width: 100%;
 }
 
-main img {
-  margin-left: auto;
+/* Header */
+header {
+  width: 1000px;
   margin-right: auto;
-  width: 150px;
+  margin-left: auto;
 }
 
-h1 {
-  font-family: "Noto Sans", serif;
-  width: 30%;
-  font-size: 2.5em;
+header img {
+  width: 20%;
+  margin-top: 4%;
+  margin-bottom: 4%;
 }
-span {
-  font-family: "Noto Sans", serif;
-  font-weight: 1000;
-}
+
+/* Main */
 main {
-  padding: 20px;
-  width: 800px;
-  margin-left: auto;
+  width: 1000px;
   margin-right: auto;
+  margin-left: auto;
+  font-family: "Inter", serif;
 }
 
-#instructions {
-  width: 60%;
+/* titolo della welcome page */
+#container h1 {
+  width: 50%;
+  font-family: "Outfit", serif;
+  font-weight: 400;
+  font-size: 5em;
+  line-height: 0.8em;
 }
 
-ul {
-  margin-top: 30px;
-  margin-bottom: 30px;
+/* sottotitolo: instructions */
+#container h2 {
+  color: #d20090;
+  font-size: 2em;
+  margin: 1%;
 }
 
-h3 {
-  color: rgb(141, 42, 124);
+/* stile dei paragrafi */
+#container p {
+  width: 50%;
+  margin-left: 1%;
+  margin-bottom: 5%;
 }
 
-button {
-  background: #00ffff;
-  color: black;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-  box-shadow: 0px 0px 12px 3px #00ffff;
-  inset: 10px 15px 20px #00ffff;
-  margin-left: 20%;
+/* stile degli elementi della lista puntata (ul) */
+#container li {
+  margin-top: 1%;
 }
 
-button:hover {
-  background: #00c0c0;
-}
-
-.custom-checkbox {
-  flex-flow: row;
-  appearance: none;
-  width: 18px;
-  height: 18px;
-  border: 2px solid white;
-  border-radius: 3px;
-  background: transparent;
-  cursor: pointer;
-  display: inline-block;
+/* stile del mini form per avviare il quiz */
+.form-container {
+  display: flex;
+  flex-flow: row nowrap;
   align-items: center;
-  position: relative;
+  justify-content: space-between;
+  margin-top: 5em;
 }
 
-.custom-checkbox:checked::before {
-  content: "";
+/* disposizione degli elementi del form */
+.check-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* Checkbox con solo bordo visibile */
+.check-container input {
+  width: 20px;
+  height: 20px;
+  border: 2px solid white;
+  background: transparent;
+  appearance: none; /* Rimuove lo stile di default */
+  cursor: pointer;
+}
+
+/* Segno di spunta quando selezionata */
+.check-container input:checked::before {
+  content: "✔";
+  font-size: 14px;
+  color: white;
   position: absolute;
-  left: 4px;
-  top: 1px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  transform: rotate(45deg);
+  left: 30.7%;
+  top: 55.75%;
+  transform: translate(-50%, -50%);
+}
+
+/* Pulsante PROCEED */
+button {
+  color: black;
+  background-color: #00ffff;
+  font-weight: 790;
+  font-size: 1.5em;
+  padding: 0.8em 3em;
+  box-shadow: 0px 0px 25px 3px #00ffff;
+  border: none;
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+#alertMessage {
+  color: red;
+  display: none;
+  margin-left: 0.5%;
 }
