--- a/assets/css/index style.css
+++ b/assets/css/index style.css
@@ -59,13 +59,20 @@ button {
   width: 12%;
   background-color: #00ffff;
   box-shadow: 0px 0px 15px 3px #00ffff;
-
   border: none;
   padding: 2em;
   border-radius: 3em;
   margin-top: 5%;
   font-size: 1.2em;
   cursor: pointer;
+}
+
+button:hover {
+  filter: none;
+  border: 2px solid #00ffff;
+  box-shadow: 0 0 10px #00ffff;
+  background-color: #00ffff;
+  color: #000000;
 }
 
 a {
