--- a/assets/css/welcom.css
+++ b/assets/css/welcom.css
@@ -105,6 +105,14 @@ button {
   margin-top: 15px;
 }
 
+button:hover {
+  filter: none;
+  border: 2px solid #00ffff;
+  box-shadow: 0 0 10px #00ffff;
+  background-color: #00ffff;
+  color: #000000;
+}
+
 #alertMessage {
   color: red;
   display: none;
